project list spacing fixed

--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -2,6 +2,9 @@
   flex: 1;
   width: 70%;
   margin: 0px auto;
+  @media screen and (max-width: 1000px) {
+    width: 100vw;
+  }
   .brief{
     text-align: center;
     h2{
