--- a/src/pages/ProjectList.module.scss
+++ b/src/pages/ProjectList.module.scss
@@ -4,19 +4,16 @@
   ul{
     // border: 1px black solid;
     display: flex;
-    // justify-content: space-between;
-    // justify-content: flex-start;
-    // align-items: flex-start;
     flex-wrap: wrap;
-    width: 100vw;
     li{
       // border: 1px solid black;
       width: 49.71%;
-      // width: 45%;
       padding: 30px 0px;
+      @media screen and (max-width:1000px) {
+        width: 70%;
+      }
       a{
-        display: inline-flex;
-        justify-content: space-between;
+        display: flex;
         .cover{
           // border: 1px solid red;
           img{
@@ -66,7 +63,6 @@
   @media screen and (max-width: 1000px) {
     ul{
       flex-direction: column;
-      // justify-content: space-evenly;
       align-items: center;
     }
   }
